Fixed bug on mobile nav not scrolling down to reveal all rooms

--- a/dev/assets/scss/layout/footer.scss
+++ b/dev/assets/scss/layout/footer.scss
@@ -253,7 +253,7 @@ footer {
     z-index: -1;
 
     &.active {
-        opacity: 0.99;
+        opacity: 0.96;
         z-index: 100;
     }
 }
